some refactoring, migrate tests to kotlin